Refactored to seperate front/backends, as well as adding a general utils and test library

--- a/AndroidTabletButtonPadServer/Frontend.csproj
+++ b/AndroidTabletButtonPadServer/Frontend.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{BFBE0197-4DBF-42FF-9FF3-DF78B4E02BEE}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>AndroidTabletButtonPadServer</RootNamespace>
-    <AssemblyName>AndroidTabletButtonPadServer</AssemblyName>
+    <RootNamespace>Frontend</RootNamespace>
+    <AssemblyName>ServerGui</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -74,8 +74,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Networking\NetDataBlock.cs" />
-    <Compile Include="Networking\NetDataBlockSerializationTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -101,6 +99,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Backend\Backend.csproj">
+      <Project>{40c671d5-13ec-46b9-b96a-a233b1801ad8}</Project>
+      <Name>Backend</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Utils\Utils.csproj">
+      <Project>{209be704-380e-4ecd-847e-7c9d9881c1f4}</Project>
+      <Name>Utils</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
