--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Networking\DataBlocks\ButtonUpdates.cs" />
     <Compile Include="Networking\NetDataBlock.cs" />
     <Compile Include="Networking\NetDataBlockSerializationTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
